# riflekt

./: CMakeLists.txt  README.md
sample/: CMakeLists.txt  main.cpp  test_object.hpp
src/private/rift/reflection/: rf_method.cpp  rf_object.cpp  rf_type_info.cpp  rf_type_ptr_property.cpp
src/public/rift/reflection/: rf_method.hpp  rf_object.hpp  rf_object_macros.hpp  rf_property.hpp  rf_type_info.hpp  rf_type_ptr_property.hpp
